--- a/lab-oop_in_python.ipynb
+++ b/lab-oop_in_python.ipynb
@@ -30,17 +30,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200 1500\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here\n",
     "class Vehicle:\n",
+    "    def __init__(self, max_speed, mileage):\n",
+    "        self.max_speed=max_speed\n",
+    "        self.mileage=mileage\n",
+    "        \n",
+    "\n",
     "    # Hint: Define __init__ method with parameters for max_speed and mileage\n",
     "    pass\n",
     "\n",
     "# Example instantiation\n",
-    "modelX = Vehicle()  # Create an instance of Vehicle\n",
+    "modelX = Vehicle(200,1500)  # Create an instance of Vehicle\n",
     "\n",
     "# Print attributes\n",
     "print(modelX.max_speed, modelX.mileage)  # Expected output: (value of max_speed, value of mileage)"
@@ -56,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +83,7 @@
    "source": [
     "# Your code here\n",
     "class Vehicle:\n",
-    "    pass\n",
+    "    pas\n",
     "\n",
     "# Example instantiation\n",
     "my_vehicle = Vehicle()\n",
@@ -87,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +300,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -301,7 +314,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
